--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="@dimen/photo_item_width"
-              android:layout_height="wrap_content"
-    android:layout_margin="8dp">
-        <ImageView
-        android:id="@+id/photo_item_imageView"
-        android:layout_width="@dimen/photo_item_image_size"
-        android:layout_height="@dimen/photo_item_image_size"
-        android:src="@mipmap/ic_launcher_round"
-        />
-        <TextView
-        android:layout_margin="4dp"
-        android:id="@+id/photo_item_title_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        tools:text="you may not use this file except in compliance with the License.
-        You may obtain a copy of the License at"/>
-</LinearLayout>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:elevation="@dimen/cardView_elevation"
+    android:layout_margin="4dp">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/photo_item_imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_image_placeholder"/>
+
+                <TextView
+                    android:layout_margin="4dp"
+                    android:id="@+id/photo_item_title_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="@integer/photo_item_title_maxLines"
+                    android:ellipsize="end"/>
+        </LinearLayout>
+</android.support.v7.widget.CardView>
