feat: adding swipe refresh for data

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,15 @@
     android:background="@color/colorBackground"
     tools:context="io.github.karadkar.jombaytest.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/act_main_recyclerView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/act_main_swipeRefreashLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/act_main_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
